tests/programs/errors/return_type_mismatch.tiny
fn getValue() -> int { return "hello"; }
print(getValue());
